--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,11 +21,18 @@
   :root {
     --background: #0B0F1E;
     --foreground: #ededed;
-    --segmented-bg: #414962; /* bg-gray-800 */
-    --segmented-active-bg: #eaeaea; /* bg-gray-700 */
-    --segmented-text: #cbd5e1; /* text-gray-300 */
-    --segmented-hover-bg: #475569; /* hover:bg-gray-600 */
-    --segmented-active-text: #005E7A; /* text-blue-400 */
+
+    /* SEGEMENTED CONTROL / MENU */
+    --segmented-bg: #414962;
+    --segmented-active-bg: #eaeaea;
+    --segmented-text: #cbd5e1;
+    --segmented-hover-bg: #475569;
+    --segmented-active-text: #005E7A;
+
+    /* TIMELINE */
+    --timeline-position: #F5F5F5;
+    --timeline-company: #CBCCCD;
+    --timeline-description: #F5F5F5;
   }
 }
 
@@ -33,4 +40,18 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.p-timeline-event-opposite {
+  display: none !important;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.p-timeline .p-timeline-event-marker {
+  border: 2px solid #6CC7E3;
+  background-color: var(--background);
 }
